# ceeMPPM

./: .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt  application.cpp
gui/: CMakeLists.txt  box.cpp  config.h.in  context.cpp  context.h  gui.cpp  guiRenderer.cpp  guiRenderer.h  log.cpp  log.h  object.cpp  shaders.h
gui/include/cee/gui/: box.h  cprocessordetection.h  gridLayout.h  gui.h  layout.h  logger.h  object.h  types.h  widget.h
hal/: CMakeLists.txt  config.h.in  display.c  display.h  framebuffer.c  framebuffer.h  gbmFramebuffer.c  gbmFramebuffer.h  gfx.c  gfx.cpp  gfx_drm.c  gfx_drm.cpp  gfx_drm.h  gfx_egl_x.c  gfx_egl_x.cpp  gfx_egl_x.h  gfx_glx.c  gfx_glx.h  hal.c  hal.cpp  i2c.cpp  i2c_i2c.c  log.cpp  log.h  util.h
hal/include/cee/hal/: gfx.h  hal.h  i2c.h  logger.h
mppm/: CMakeLists.txt  config.h.in  glRenderer.cpp  glRenderer.h  glesRenderer.cpp  glesRenderer.h  input.cpp  log.cpp  mppm.cpp  renderer.cpp  shader.cpp
mppm/include/cee/mppm/: assertions.h  event.h  files.h  input.h  log.h  mppm.h  parser.h  renderer.h  rng.h  shader.h  util.h
profiler/: CMakeLists.txt  profiler.cpp
profiler/include/cee/profiler/: profiler.h
tests/: CMakeLists.txt  mppm_file.cpp  mppm_log.cpp  mppm_parse.cpp
